refactor + add test filter